--- a/Destiny2/destiny2/css/bounty.css
+++ b/Destiny2/destiny2/css/bounty.css
@@ -16,11 +16,10 @@ h1,
 h2,
 h3,
 h4,
-h5 {
-  margin: 0;
-}
-
-p {
+h5,
+p,
+label {
+  color: white;
   margin: 0;
 }
 
@@ -199,14 +198,14 @@ ul li {
       justify-content: space-around;
   width: 90%;
   height: 90%;
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: white;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.3333333333);
   border-radius: 0.25rem;
 }
-#bounty .bounty-list .bounty-box .bounty-item .bounty-front .bounty-info p {
-  margin-bottom: 1rem;
+#bounty .bounty-list .bounty-box .bounty-item .bounty-front .bounty-info p.sub-title {
+  font-size: 0.75rem;
 }
 #bounty .bounty-list .bounty-box .bounty-name {
   width: 100%;
