--- a/Destiny2/destiny2/scss/decklist.scss
+++ b/Destiny2/destiny2/scss/decklist.scss
@@ -121,8 +121,11 @@
 
                 .card-name {
                     text-align: center;
-                    color: white;
                     font-size: 1.5rem;
+                }
+
+                .card-text {
+                    font-size: 1rem;
                 }
             }
         }
