--- a/Destiny2/destiny2/scss/bounty.scss
+++ b/Destiny2/destiny2/scss/bounty.scss
@@ -94,14 +94,16 @@
                         justify-content: space-around;
                         width: 90%;
                         height: 90%;
-                        font-size: 1.25rem;
+                        font-size: 1rem;
                         color: white;
                         text-align: center;
                         background-color: #0005;
                         border-radius: 0.25rem;
 
                         p {
-                            margin-bottom: 1rem;
+                            &.sub-title {
+                                font-size: 0.75rem;
+                            }
                         }
                     }
                 }
