--- a/Destiny2/destiny2/scss/event.scss
+++ b/Destiny2/destiny2/scss/event.scss
@@ -80,14 +80,15 @@
                         justify-content: space-around;
                         width: 90%;
                         height: 90%;
-                        font-size: 1.25rem;
+                        font-size: 1rem;
                         color: white;
                         text-align: center;
                         background-color: #0005;
                         border-radius: 0.25rem;
 
-                        p {
-                            margin-bottom: 1rem;
+                        .title,
+                        .sub-title {
+                            font-size: 1.25rem;
                         }
                     }
                 }
