--- a/Destiny2/destiny2/css/globalevent.css
+++ b/Destiny2/destiny2/css/globalevent.css
@@ -203,14 +203,15 @@ ul li {
       justify-content: space-around;
   width: 90%;
   height: 90%;
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: white;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.3333333333);
   border-radius: 0.25rem;
 }
-#event .event-list .event-box .event-item .event-front .event-info p {
-  margin-bottom: 1rem;
+#event .event-list .event-box .event-item .event-front .event-info .title,
+#event .event-list .event-box .event-item .event-front .event-info .sub-title {
+  font-size: 1.25rem;
 }
 #event .event-list .event-box .event-time {
   width: 70%;
@@ -373,7 +374,7 @@ ul li {
           justify-content: center;
   width: 85%;
   height: 90%;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: white;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.3333333333);
